--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                     <input id="search__input" type="search" placeholder="Enter search query…" />
                     <div class="search__results">
                         <p class="search__results-loader">Loading…</p>
+                        <p class="search__no-results">We found nothing…</p>
                         <ul class="search__results-list"> </ul>
                     </div>
                 </div>
